tools/tests/errors/surf_lib_24.experr
strptime: text does not match format
